--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ DerivedData/
 
 Carthage/
 Carthage/Build/
+Pods/
 
 # NB: slash on the end, so we only remove the FOLDER, not any files that were badly named "build"
 
