--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
 
     - name: Test
       working-directory: ./src
-      run: xcodebuild -workspace Mockingbird.xcworkspace test -scheme Mockingbird
+      run: xcodebuild -workspace Mockingbird.xcworkspace test -scheme Mockingbird '-only-testing:MockingbirdTests'
