--- a/src/Mockingbird/Info.plist
+++ b/src/Mockingbird/Info.plist
@@ -33,7 +33,7 @@
 	<key>NSSupportsSuddenTermination</key>
 	<true/>
 	<key>SUFeedURL</key>
-	<string>https://raw.githubusercontent.com/Mattcbr/myMovieDB/master/appcast.xml</string>
+	<string>https://raw.githubusercontent.com/Farfetch/mockingbird/master/.updates/appcast.xml</string>
 	<key>SUPublicEDKey</key>
 	<string>CDw2xInMlNL3hNPLvGXwXrclHyDR95zQD7lC7rNw/5M=</string>
 </dict>
