Adding the auto updater feature using sparkle (#15)
* Adding first steps for auto update

* Updating pods and appcast

* Pointing the app to the right appcast location

* Adding small documentation

--- a/src/Mockingbird/Info.plist
+++ b/src/Mockingbird/Info.plist
@@ -32,5 +32,9 @@
 	<true/>
 	<key>NSSupportsSuddenTermination</key>
 	<true/>
+	<key>SUFeedURL</key>
+	<string>https://raw.githubusercontent.com/Farfetch/mockingbird/master/.updates/appcast.xml</string>
+	<key>SUPublicEDKey</key>
+	<string>CDw2xInMlNL3hNPLvGXwXrclHyDR95zQD7lC7rNw/5M=</string>
 </dict>
 </plist>
